--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://raghulkannan.me",
   "scripts": {
     "clean": "rimraf dist",
     "dev": "vite",
     "build": "vite build && cp dist/index.html dist/404.html",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -35,4 +37,5 @@
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.11"
   }
+
 }
