--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "src/main.jsx",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
@@ -15,11 +15,11 @@
   ],
   "routes": [
     {
-      "src": "/sendMsg",
+      "src": "/api/sendMsg",
       "dest": "/api/sendMsg"
     },
     {
-      "src": "/admin",
+      "src": "/api/admin",
       "dest": "/api/admin"
     },
     {
