--- a/vercel.json
+++ b/vercel.json
@@ -7,17 +7,16 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/sendMsg",
-      "dest": "/backend/index.js"
-    },
-    {
-      "src": "/api/admin",
-      "dest": "/backend/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
-}
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*\\.js)", "dest": "/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+    "headers": [
+      {
+        "source": "/(.*\\.js)",
+        "headers": [
+          { "key": "Content-Type", "value": "application/javascript" }
+        ]
+      }
+    ]
+  }
