--- a/vercel.json
+++ b/vercel.json
@@ -13,18 +13,18 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/sendMsg",
-      "dest": "/api/sendMsg"
+      "source": "/api/sendMsg",
+      "destination": "/api/sendMsg"
     },
     {
-      "src": "/api/admin",
-      "dest": "/api/admin"
+      "source": "/api/admin",
+      "destination": "/api/admin"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
