--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "homepage": "https://raghulkannan.me",
   "scripts": {
     "clean": "rimraf dist",
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "vite",
+    "dev:backend": "nodemon backend/index.js",
     "build": "vite build && cp dist/index.html dist/404.html",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "start": "node backend/index.js"
   },
   "dependencies": {
@@ -22,27 +24,18 @@
     "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
     "mongoose": "^8.8.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0",
-    "react-scroll": "^1.9.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
+    "vite": "^2.9.9"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "html-loader": "^5.1.0",
-    "jest": "^29.7.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.11"
+    "autoprefixer": "^10.4.7",
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.15",
+    "postcss": "^8.4.14",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.1.4"
   }
 }
