--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "node backend/index.js"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -28,12 +29,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "vite": "^2.9.9"
+    "vite": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.2.1",
-    "nodemon": "^2.0.15",
+    "nodemon": "^3.1.7",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.1.4"
