--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://raghulkannan.me",
   "scripts": {
     "clean": "rimraf dist",
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
@@ -16,7 +15,7 @@
     "start": "node backend/index.js"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -25,10 +24,12 @@
     "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
     "mongoose": "^8.8.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
+    "react-scroll": "^1.8.7",
     "vite": "^4.2.0"
   },
   "devDependencies": {
