--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 PORT=3000
 FRONTEND_API_URL= http://localhost:5173
+
+USER1_ID=raghul
+USER1_PASSWORD=praisha
+USER2_ID=praisha
+USER2_PASSWORD=raghul
