--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,36 +5,26 @@
   "type": "module",
   "scripts": {
     "clean": "rimraf dist",
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "vite",
-    "dev:backend": "nodemon backend/index.js",
+    "dev": "vite",
     "build": "vite build && cp dist/index.html dist/404.html",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "start": "node backend/index.js"
+    "start": "node /backend/index.js"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "axios": "^1.7.8",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "express-rate-limit": "^7.4.1",
-    "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
-    "mongoose": "^8.8.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
-    "vite": "^4.2.0"
+    "vite": "^4.5.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "concurrently": "^7.2.1",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
