--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "vite build && cp dist/index.html dist/404.html",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "start": "node /backend/index.js"
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
@@ -25,6 +24,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^6.2.0",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.14",
     "rimraf": "^3.0.2",
